[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu/lobby_ui.gd" type="Script" id=1]
[ext_resource path="res://menu/button_texture.tres" type="StyleBox" id=2]
[ext_resource path="res://font/broken_input_workaround.tres" type="DynamicFont" id=3]
[ext_resource path="res://menu/lobby_networking.gd" type="Script" id=4]
[ext_resource path="res://menu/button_pressed_texture.tres" type="StyleBox" id=5]
[ext_resource path="res://menu/quit_button.gd" type="Script" id=6]
[ext_resource path="res://font/ultralarge.tres" type="DynamicFont" id=7]
[ext_resource path="res://menu/toggle_sound.gd" type="Script" id=8]
[ext_resource path="res://menu/open_discord.gd" type="Script" id=9]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.492
margin_top = -55.0006
margin_right = 168.508
margin_bottom = 100.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="network_label" type="Label" parent="StartButtons"]
margin_right = 338.0
margin_bottom = 6.0
text = "network game"

[node name="network" type="HBoxContainer" parent="StartButtons"]
margin_top = 10.0
margin_right = 338.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 50 )

[node name="client_status" type="Label" parent="StartButtons/network"]
visible = false
margin_right = 102.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "test text"
align = 2

[node name="create" type="Button" parent="StartButtons/network"]
margin_right = 150.0
margin_bottom = 50.0
grow_horizontal = 0
rect_min_size = Vector2( 150, 0 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
shortcut_in_tooltip = false

[node name="limiter" type="Label" parent="StartButtons/network"]
margin_left = 154.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 28.0
text = "- or -"

[node name="server_status" type="Label" parent="StartButtons/network"]
visible = false
margin_left = 196.0
margin_right = 256.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "server status"

[node name="connect_container" type="VBoxContainer" parent="StartButtons/network"]
margin_left = 188.0
margin_right = 338.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 0 )

[node name="game_code_input" type="LineEdit" parent="StartButtons/network/connect_container"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
custom_fonts/font = ExtResource( 3 )
placeholder_text = "enter game code"
caret_blink = true

[node name="connect" type="Button" parent="StartButtons/network/connect_container"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
shortcut_in_tooltip = false
keep_pressed_outside = true
text = "join game"

[node name="lobby_networking" type="Node" parent="StartButtons"]
script = ExtResource( 4 )

[node name="local_label" type="Label" parent="StartButtons"]
margin_top = 64.0
margin_right = 338.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 20 )
text = "local game"
valign = 2

[node name="local" type="HBoxContainer" parent="StartButtons"]
margin_top = 88.0
margin_right = 338.0
margin_bottom = 118.0

[node name="multiplayer" type="Button" parent="StartButtons/local"]
margin_right = 167.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Start local game"

[node name="tutorial" type="Button" parent="StartButtons/local"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -40.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="HBoxContainer" parent="Footer"]
margin_right = 260.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Sound" type="CheckBox" parent="Footer/Left"]
margin_right = 65.0
margin_bottom = 35.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
pressed = true
text = "Sound"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="HBoxContainer" parent="Footer"]
margin_left = 264.0
margin_right = 525.0
margin_bottom = 35.0
size_flags_horizontal = 3
alignment = 1

[node name="OpenDiscord" type="Button" parent="Footer/Center"]
margin_left = 54.0
margin_right = 206.0
margin_bottom = 35.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
text = "Join our Discord Community!"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="HBoxContainer" parent="Footer"]
margin_left = 529.0
margin_right = 790.0
margin_bottom = 35.0
size_flags_horizontal = 3
alignment = 2

[node name="Exit" type="Button" parent="Footer/Right"]
margin_left = 166.0
margin_right = 261.0
margin_bottom = 35.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
text = "Exit to Desktop"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3
margin_bottom = 9.99999
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.411765, 0.305882, 0.431373, 1 )
custom_colors/font_color_shadow = Color( 0.364706, 0.670588, 0.854902, 1 )
text = "2 PLANETS"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
